<resources>
    <string name="app_name" translatable="false">ExHieuNT</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="previous_text" translatable="false">Previous text</string>
    <string name="draw_anime" translatable="false">Draw Anime</string>
    <string name="font_fuzzybubbles" translatable="false">fonts/fuzzybubbles_regular.ttf</string>
    <string name="font_fugazone" translatable="false">fonts/fugazone.ttf</string>
    <string name="font_frijole" translatable="false">fonts/frijole.ttf</string>
    <string name="font_frederickathegreat" translatable="false">fonts/frederickathegreat.ttf</string>
    <string name="font_forte" translatable="false">fonts/forte.ttf</string>
    <string name="font_inter" translatable="false">fonts/inter.ttf</string>
    <string name="font_baloo2" translatable="false">fonts/baloo2.ttf</string>
    <string name="font_bigshotone" translatable="false">fonts/bigshotone.ttf</string>
    <string name="font_boogaloo" translatable="false">fonts/boogaloo.ttf</string>
    <string name="font_brushscript" translatable="false">fonts/brushscript.ttf</string>
    <string name="font_lexend" translatable="false">fonts/lexend.ttf</string>
    <string name="font_montserrat" translatable="false">fonts/montserrat.ttf</string>
    <string name="font_mrdafoe" translatable="false">fonts/mrdafoe.ttf</string>
    <string name="my_album" translatable="false">My Album</string>
    <string name="favourite" translatable="false">Favourite</string>
    <string name="your_gallery_is_empty_let_s_fix_that" translatable="false">Your gallery is empty... let’s fix that!</string>
    <string name="draw_now" translatable="false">Draw now!</string>
    <string name="home" translatable="false">Home</string>
    <string name="draw_text" translatable="false">Draw Text</string>
    <string name="draw" translatable="false">Draw</string>
    <string name="mine" translatable="false">Mine</string>

    <string name="phone_or_email" translatable="false">Phone or email</string>
    <string name="password" translatable="false">Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="calculator" translatable="false">Calculator</string>
    <string name="term_2" translatable="false">Term 2</string>
    <string name="term_1" translatable="false">Term 1</string>
    <string name="operations" translatable="false">Operations</string>
    <string name="result" translatable="false">Result</string>
    <string name="_0" translatable="false">0</string>
    <string name="name_must_be_3_characters" translatable="false">Name must be ≥ 3 characters</string>
    <string name="must_be_exactly_9_digits" translatable="false">Must be exactly 9 digits</string>
    <string name="degree" translatable="false">Degree</string>
    <string name="hobbies" translatable="false">Hobbies</string>
    <string name="reading_news" translatable="false">Reading news</string>
    <string name="reading_books" translatable="false">Reading books</string>
    <string name="reading_code" translatable="false">Reading code</string>
    <string name="additional_information" translatable="false">Additional Information</string>
    <string name="bachelor" translatable="false">Bachelor</string>
    <string name="associate" translatable="false">Associate</string>
    <string name="vocational" translatable="false">Vocational</string>
    <string name="enter_additional_information" translatable="false">Enter additional information</string>
    <string name="infomation" translatable="false">Infomation</string>
    <string name="submit" translatable="false">SUBMIT</string>
    <string name="full_name" translatable="false">* Full name</string>
    <string name="national_id" translatable="false">* National ID</string>
    <string name="error_full_name" translatable="false">Full name required</string>
    <string name="error_national_id" translatable="false">National ID required</string>
    <string name="term1" translatable="false">* Term 1</string>
    <string name="term2" translatable="false">* Term 2</string>
    <string name="error_div" translatable="false">Number can’t divide 0</string>
    <string name="error_username" translatable="false">* Tài khoản không đúng</string>
    <string name="error_password" translatable="false">* Mật khẩu không đúng</string>
    <string name="error_additional_information" translatable="false">Additional information >= 100 character</string>

    <string name="title_language">Language</string>
    <string name="text_language_english" translatable="false">English</string>
    <string name="text_language_spanish" translatable="false">Español</string>
    <string name="text_language_vietnamese" translatable="false">Tiếng Việt</string>
    <string name="text_language_french" translatable="false">Français</string>
    <string name="text_language_hindi" translatable="false">हिन्दी</string>
    <string name="text_language_german" translatable="false">Deutsch</string>
    <string name="text_language_portuguese" translatable="false">Português</string>
    <string name="text_language_italian" translatable="false">Italiano</string>
    <string name="text_language_arabic" translatable="false">عربي</string>
    <string name="text_language_japanese" translatable="false">日本語</string>
    <string name="text_language_korean" translatable="false">이스라엘</string>
    <string name="text_language_urdu" translatable="false">اُردُو</string>
    <string name="text_language_afrikaans" translatable="false">Afrikaans</string>
    <string name="text_language_hebrew" translatable="false">ישראל</string>
    <string name="text_language_hausa" translatable="false">Harshen Hausa</string>
    <string name="text_language_chinese" translatable="false">中国人</string>
    <string name="text_language_turkish" translatable="false">Türkçe</string>
    <string name="text_language_indonesia" translatable="false">Bahasa Indonesia</string>
    <string name="text_language_dutch" translatable="false">Dutch</string>
    <string name="text_language_russian" translatable="false">Русский</string>
    <string name="text_language_polish" translatable="false">Polski</string>

    <string name="code_language_english" translatable="false">en</string>
    <string name="code_language_spanish" translatable="false">es</string>
    <string name="code_language_vietnamese" translatable="false">vi</string>
    <string name="code_language_french" translatable="false">fr</string>
    <string name="code_language_hindi" translatable="false">hi</string>
    <string name="code_language_german" translatable="false">de</string>
    <string name="code_language_portuguese" translatable="false">pt</string>
    <string name="code_language_italian" translatable="false">it</string>
    <string name="code_language_arabic" translatable="false">ar</string>
    <string name="code_language_japanese" translatable="false">ja</string>
    <string name="code_language_korean" translatable="false">ko</string>
    <string name="code_language_urdu" translatable="false">ur</string>
    <string name="code_language_afrikaans" translatable="false">af</string>
    <string name="code_language_hebrew" translatable="false">iw</string>
    <string name="code_language_hausa" translatable="false">ha</string>
    <string name="code_language_chinese" translatable="false">zh</string>
    <string name="code_language_turkish" translatable="false">tr</string>
    <string name="code_language_indonesia" translatable="false">in</string>
    <string name="code_language_dutch" translatable="false">nl</string>
    <string name="code_language_russian" translatable="false">ru</string>
    <string name="code_language_polish" translatable="false">pl</string>
    <string name="total_in_the_past_24_hours" translatable="false">Total in the past 24 hours</string>
    <string name="mm" translatable="false">" mm"</string>
    <string name="rain" translatable="false">Rain</string>
    <string name="wintry_mix" translatable="false">Wintry mix</string>
    <string name="snow" translatable="false">Snow</string>
    <string name="temperature" translatable="false">Temperature</string>
    <string name="da_nang" translatable="false">Đà Nẵng</string>
    <string name="_21" translatable="false">21°</string>
    <string name="partly_cloudy" translatable="false">Partly Cloudy</string>
    <string name="h_29_l_15" translatable="false">H:29° L:15°</string>
    <string name="user_name" translatable="false">User name</string>
    <string name="user_age" translatable="false">User age</string>
    <string name="add_user" translatable="false">Add user</string>
    <string name="click_the_button_to_display_the_full_list_of_users" translatable="false">Click the button to display the full list of users.</string>
    <string name="show_all" translatable="false">Show all</string>
    <string name="delete_all" translatable="false">Delete all</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="are_you_sure_you_want_to_delete" translatable="false">Are you sure you want to delete</string>
    <string name="are_you_sure_you_want_to_delete_all" translatable="false">Are you sure you want to delete all</string>
    <string name="users" translatable="false">users</string>
    <string name="years_old" translatable="false">years old</string>
    <string name="location" translatable="false">Location</string>
    <string name="permission" translatable="false">Permission</string>
    <string name="allow_necessary_permissions" translatable="false">Allow necessary permissions for full functionality. Your data stays private.</string>
    <string name="permission_is_not_allowed" translatable="false">Permission is not allowed</string>
    <string name="asian_mobile_company" translatable="false">Asian Mobile Company</string>
    <string name="permission_is_allowed" translatable="false">Permission is allowed</string>
    <string name="location_service" translatable="false">Location Service</string>
    <string name="running" translatable="false">Running</string>
    <string name="no_internet" translatable="false">Không có kết nối Internet</string>
    <string name="download" translatable="false">Download</string>
    <string name="try_again" translatable="false">Try Again</string>
    <string name="downloaded_successfully" translatable="false">Downloaded successfully</string>
    <string name="downloaded_failed" translatable="false">Downloaded failed</string>
    <string name="position" translatable="false">%d</string>
    <string name="all_is13" translatable="false">ALL</string>
    <string name="favorite_is13" translatable="false">FAVORITE</string>
    <string name="all" translatable="false">ALL</string>
    <string name="favorite" translatable="false">FAVORITE</string>
    <string name="app_store" translatable="false">App Store</string>
    <string name="apple_music" translatable="false">Apple music</string>
    <string name="facetime" translatable="false">Facetime</string>
    <string name="messenger" translatable="false">Messenger</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="voice_memos" translatable="false">Voice memos</string>
    <string name="netflix" translatable="false">Netflix</string>
    <string name="your_holder_name" translatable="false">Your hodername</string>
    <string name="download_image" translatable="false">Download Image</string>
    <string name="delete_successfully" translatable="false">Delete successfully</string>
    <string name="delete_failed" translatable="false">Delete failed</string>
</resources>
