<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".issue6.ex1.PermissionActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:importantForAccessibility="no"
        android:paddingTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:srcCompat="@drawable/ic_permission" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center"
        android:textColor="@color/blue"
        android:text="@string/permission" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textAlignment="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/gray_AFAFAF"
        android:text="@string/allow_necessary_permissions" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginBottom="15dp"
        android:elevation="3dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/my_out_line_location"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/location" />
        <Switch
            android:id="@+id/sLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:trackTint="@color/switch_color"
            android:track="@drawable/my_switch_track"
            android:thumb="@drawable/my_switch_thumb"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>
    <TextView
        android:id="@+id/tvPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/red"
        android:text="@string/permission_is_not_allowed" />
</LinearLayout>
