<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".issue5.fragment.MineFragment">
    <LinearLayout
        android:id="@+id/llMine"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:background="@drawable/my_out_line_draw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/tvMyAlbum"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:background="@drawable/mine"
            android:fontFamily="@font/fuzzybubbles_regular"
            android:gravity="center"
            android:text="@string/my_album"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/tvFavourite"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/favourite"
            android:layout_margin="3dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:background="@drawable/mine"
            android:fontFamily="@font/fuzzybubbles_regular"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llMine">
        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_mine_1" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fuzzybubbles_regular"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"
            android:text="@string/your_gallery_is_empty_let_s_fix_that"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/draw_now"
            android:gravity="center"
            android:fontFamily="@font/fuzzybubbles_regular"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:background="@drawable/ic_button"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
