<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:contentDescription="@null"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/img_logo" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_below="@id/ivLogo"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints="emailAddress"
        android:inputType="text"
        android:hint="@string/phone_or_email"
        android:background="@drawable/my_edittext"
        android:drawableEnd="@drawable/ic_delete"
        android:paddingLeft="16dp"
        android:paddingTop="14dp"
        android:paddingRight="16dp"
        android:paddingBottom="14dp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_below="@id/edtUsername"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:paddingTop="14dp"
        android:paddingRight="16dp"
        android:paddingBottom="14dp"
        android:background="@drawable/my_edittext"
        android:drawableEnd="@drawable/ic_hide"
        android:hint="@string/password" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_below="@id/edtPassword"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="14dp"
        android:ems="10"
        android:background="@drawable/my_button"
        android:text="@string/login"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</RelativeLayout>
