<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:showPaths="true"
    app:layoutDescription="@xml/my_scene"
    tools:context=".issue8.view.UserActivity">
    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:translationZ="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginTop="30dp"
        android:text="@string/user_name" />
    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:translationZ="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:paddingBottom="3dp"
        android:textSize="28sp"
        android:textAlignment="center"
        android:background="@drawable/my_edittext_user"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName"
        tools:ignore="LabelFor" />
    <TextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_age"
        android:translationZ="0dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUserName"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:id="@+id/edtAge"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:translationZ="0dp"
        android:background="@drawable/my_edittext_user"
        android:paddingBottom="3dp"
        android:textSize="28sp"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/tvAge"
        tools:ignore="LabelFor" />
    <Button
        android:id="@+id/btnAddUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edtAge"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:translationZ="0dp"
        android:drawableStart="@drawable/ic_add"
        android:drawablePadding="10dp"
        android:text="@string/add_user"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/blue_9AA8FF"
        android:background="@drawable/my_button_add_user"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clListUser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/my_scrollview"
        app:layout_constraintTop_toBottomOf="@id/btnAddUser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <View
            android:id="@+id/vLine"
            android:layout_width="74dp"
            android:layout_height="8dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/my_line"
            android:translationZ="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListUser"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="20dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/vLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <Button
            android:id="@+id/btnDeleteAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:drawableStart="@drawable/ic_delete_all"
            android:text="@string/delete_all"
            android:drawablePadding="10dp"
            android:textAllCaps="false"
            android:visibility="gone"
            android:textColor="@color/white"
            android:background="@drawable/my_button_delete_all"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <ImageView
            android:id="@+id/ivList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_list"
            android:layout_marginBottom="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvLabel"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tvLabel"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/click_the_button_to_display_the_full_list_of_users"
            app:layout_constraintTop_toBottomOf="@id/vLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <Button
            android:id="@+id/btnShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_all"
            android:drawableStart="@drawable/ic_show"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:drawablePadding="10dp"
            android:background="@drawable/my_button_show"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tvLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.motion.widget.MotionLayout>
